# starter_template

./: CMakeLists.txt  README.md  main.cpp  testA.cpp  testB.cpp  vector.cpp  vector.h
_tests/_test_files/: basic_test.cpp  testA.cpp  testB.cpp
includes/: array_functions.cpp  array_functions.h  consts.h
